fix horizontal scroll

--- a/web/themes/custom/athex/css/paragraph/collapsible_items.scss
+++ b/web/themes/custom/athex/css/paragraph/collapsible_items.scss
@@ -1,18 +1,8 @@
 .colibWrapper {
     background: linear-gradient(108deg, #00845D -7.7%, rgba(0, 181, 127, 0.76) 145.57%);
     padding: 80px 24px;
-    width: calc(100vw - 15px);
     margin-bottom: 80px;
 }
-
-.container.colib {
-    padding: 0;
-    width: 100vw;
-    margin-left: 0;
-    margin-right: 0;
-}
-
-
 
 .colibTextWrapper {
     display: flex;
